chore: update aspose api url

--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,6 @@
 {
   "aspose": {
-    "baseUrl": "http://api.aspose.com",
+    "baseUrl": "https://api.aspose.cloud/v4.0",
     "clientId": "",
     "clientSecret": ""
   }
